Fix class names and make code compile. TODO: restore tool type / harvest level features from old code.