@@ -6,10 +6,10 @@ import com.google.gson.JsonObject;
 import dev.gigaherz.jsonthings.things.builders.EnchantmentBuilder;
 import dev.gigaherz.jsonthings.util.parse.JParse;
 import dev.gigaherz.jsonthings.util.parse.value.ArrayValue;
-import net.minecraft.advancements.critereon.ItemPredicate;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.enchantment.Enchantment;
-import net.minecraft.world.item.enchantment.EnchantmentCategory;
+import net.minecraft.advancements.criterion.ItemPredicate;
+import net.minecraft.enchantment.Enchantment;
+import net.minecraft.enchantment.EnchantmentType;
+import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.event.RegistryEvent;
 import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.registries.IForgeRegistry;
@@ -20,6 +20,7 @@ import org.apache.logging.log4j.Logger;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class EnchantmentParser extends ThingParser<EnchantmentBuilder>
 {
@@ -71,12 +72,12 @@ public class EnchantmentParser extends ThingParser<EnchantmentBuilder>
 
     private List<ResourceLocation> parseBlacklist(ArrayValue blacklist)
     {
-        return blacklist.flatMap(entries -> entries.map(e -> new ResourceLocation(e.string().getAsString())).toList());
+        return blacklist.flatMap(entries -> entries.map(e -> new ResourceLocation(e.string().getAsString())).collect(Collectors.toList()));
     }
 
-    private EnchantmentCategory parseEnchantmentType(String str)
+    private EnchantmentType parseEnchantmentType(String str)
     {
-        EnchantmentCategory type = types.get(str);
+        EnchantmentType type = types.get(str);
         if (type == null) throw new IllegalStateException("No enchantment type known with name " + str);
         return type;
     }
@@ -94,26 +95,26 @@ public class EnchantmentParser extends ThingParser<EnchantmentBuilder>
             .put("rare", Enchantment.Rarity.RARE)
             .put("very_rare", Enchantment.Rarity.VERY_RARE)
             .build();
-    private static final Map<String, EnchantmentCategory> types = buildTypesMap();
+    private static final Map<String, EnchantmentType> types = buildTypesMap();
 
-    private static Map<String, EnchantmentCategory> buildTypesMap()
+    private static Map<String, EnchantmentType> buildTypesMap()
     {
-        Map<String, EnchantmentCategory> entries = Maps.newHashMap();
-        entries.put("armor", EnchantmentCategory.ARMOR);
-        entries.put("armor_feet", EnchantmentCategory.ARMOR_FEET);
-        entries.put("armor_legs", EnchantmentCategory.ARMOR_LEGS);
-        entries.put("armor_chest", EnchantmentCategory.ARMOR_CHEST);
-        entries.put("armor_head", EnchantmentCategory.ARMOR_HEAD);
-        entries.put("weapon", EnchantmentCategory.WEAPON);
-        entries.put("digger", EnchantmentCategory.DIGGER);
-        entries.put("fishing_rod", EnchantmentCategory.FISHING_ROD);
-        entries.put("trident", EnchantmentCategory.TRIDENT);
-        entries.put("breakable", EnchantmentCategory.BREAKABLE);
-        entries.put("bow", EnchantmentCategory.BOW);
-        entries.put("wearable", EnchantmentCategory.WEARABLE);
-        entries.put("crossbow", EnchantmentCategory.CROSSBOW);
-        entries.put("vanishable", EnchantmentCategory.VANISHABLE);
-        for (EnchantmentCategory type : EnchantmentCategory.values())
+        Map<String, EnchantmentType> entries = Maps.newHashMap();
+        entries.put("armor", EnchantmentType.ARMOR);
+        entries.put("armor_feet", EnchantmentType.ARMOR_FEET);
+        entries.put("armor_legs", EnchantmentType.ARMOR_LEGS);
+        entries.put("armor_chest", EnchantmentType.ARMOR_CHEST);
+        entries.put("armor_head", EnchantmentType.ARMOR_HEAD);
+        entries.put("weapon", EnchantmentType.WEAPON);
+        entries.put("digger", EnchantmentType.DIGGER);
+        entries.put("fishing_rod", EnchantmentType.FISHING_ROD);
+        entries.put("trident", EnchantmentType.TRIDENT);
+        entries.put("breakable", EnchantmentType.BREAKABLE);
+        entries.put("bow", EnchantmentType.BOW);
+        entries.put("wearable", EnchantmentType.WEARABLE);
+        entries.put("crossbow", EnchantmentType.CROSSBOW);
+        entries.put("vanishable", EnchantmentType.VANISHABLE);
+        for (EnchantmentType type : EnchantmentType.values())
         {
             if (!entries.containsValue(type))
             {
