@@ -1,21 +1,22 @@
 package dev.gigaherz.jsonthings.things.parsers;
 
+import com.google.common.collect.Lists;
 import com.google.gson.JsonObject;
 import dev.gigaherz.jsonthings.things.builders.TierBuilder;
 import dev.gigaherz.jsonthings.util.Utils;
 import dev.gigaherz.jsonthings.util.parse.JParse;
 import dev.gigaherz.jsonthings.util.parse.value.Any;
 import dev.gigaherz.jsonthings.util.parse.value.ArrayValue;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.item.crafting.Ingredient;
 import net.minecraft.tags.BlockTags;
 import net.minecraft.tags.ItemTags;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraftforge.common.TierSortingRegistry;
+import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.common.util.Lazy;
 import org.apache.commons.lang3.mutable.MutableObject;
 
 import java.util.List;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 public class TierParser extends ThingParser<TierBuilder>
 {
@@ -27,7 +28,7 @@ public class TierParser extends ThingParser<TierBuilder>
     @Override
     public void finishLoading()
     {
-        getBuilders().forEach(thing -> TierSortingRegistry.registerTier(thing.get(), thing.getRegistryName(), thing.getSortAfter(), thing.getSortBefore()));
+        //getBuilders().forEach(thing -> TierSortingRegistry.registerTier(thing.get(), thing.getRegistryName(), thing.getSortAfter(), thing.getSortBefore()));
     }
 
     @Override
@@ -41,7 +42,6 @@ public class TierParser extends ThingParser<TierBuilder>
                 .key("speed", val -> val.floatValue().min(1).handle(builder::setSpeed))
                 .key("attack_damage_bonus", val -> val.floatValue().min(1).handle(builder::setAttackDamageBonus))
                 .key("enchantment_value", val -> val.intValue().min(1).handle(builder::setEnchantmentValue))
-                .key("tag", val -> val.string().map(BlockTags::bind).handle(builder::setTag))
                 .key("repair_ingredient", val -> val.map(TierParser::parseMiniIngredient).handle(builder::setRepairIngredient))
                 .key("sort_after", val -> val.array().map(TierParser::parseDependencyList).handle(builder::setAfterDependencies))
                 .key("sort_before", val -> val.array().map(TierParser::parseDependencyList).handle(builder::setBeforeDependencies));
@@ -55,7 +55,7 @@ public class TierParser extends ThingParser<TierBuilder>
 
         any.obj()
                 .noKey("type", () -> new IllegalStateException("Custom ingredients not supported yet. Please use an 'item' or 'tag' ingredient."))
-                .mutex(List.of("item", "tag"), () -> new IllegalStateException("Cannot have both 'tag' and 'item' in the ingredient at the same time."))
+                .mutex(Lists.newArrayList("item", "tag"), () -> new IllegalStateException("Cannot have both 'tag' and 'item' in the ingredient at the same time."))
                 .ifKey("tag", val -> val.string().map(ItemTags::bind).handle(tag -> out.setValue(Lazy.of(() -> Ingredient.of(tag)))))
                 .ifKey("tag", val -> val.string().map(ResourceLocation::new).handle(item -> out.setValue(Lazy.of(() -> Ingredient.of(Utils.getItemOrCrash(item))))));
 
@@ -64,6 +64,6 @@ public class TierParser extends ThingParser<TierBuilder>
 
     private static List<Object> parseDependencyList(ArrayValue array)
     {
-        return array.flatMap(entries -> entries.map(e -> (Object) e.string().getAsString()).toList());
+        return array.flatMap(entries -> entries.map(e -> (Object) e.string().getAsString()).collect(Collectors.toList()));
     }
 }
